# coretrace-concurrency-analyzer

./: CMakeLists.txt  CONTRIBUTING.md  M2_M3_TRACKER.md  README.md  REVIEW00.md  main.cpp
.github/workflows/: clang-format.yml  cmake-ctest.yml  human-output-regression.yml
extern-project/: CMakeLists.txt
extern-project/src/: main.cpp
include/: coretrace_concurrency_analysis.hpp  coretrace_concurrency_analyzer.hpp  coretrace_concurrency_error.hpp
scripts/: format-check.sh  format.sh
scripts/ci/: commit_checker.py
src/: coretrace_concurrency_analysis.cpp  coretrace_concurrency_analyzer.cpp  coretrace_concurrency_error.cpp
src/internal/: compilation_backend.cpp  compilation_backend.hpp  compile_command_builder.cpp  compile_command_builder.hpp  ir_loader.cpp  ir_loader.hpp  temporary_bitcode_file.cpp  temporary_bitcode_file.hpp
src/internal/analysis/: concurrency_symbol_classifier.cpp  concurrency_symbol_classifier.hpp  data_race_checker.cpp  data_race_checker.hpp  fact_queries.hpp  facts.hpp  interprocedural_bindings.cpp  interprocedural_bindings.hpp  ir_utils.cpp  ir_utils.hpp  llvm_function_analysis_provider.cpp  llvm_function_analysis_provider.hpp  lock_order_analyzer.cpp  lock_order_analyzer.hpp  lock_order_collector.cpp  lock_order_collector.hpp  lock_scope_tracker.cpp  lock_scope_tracker.hpp  lock_state_propagator.cpp  lock_state_propagator.hpp  missing_join_detector.cpp  missing_join_detector.hpp  report_builder.cpp  report_builder.hpp  shared_access_collector.cpp  shared_access_collector.hpp  thread_context_propagator.cpp  thread_context_propagator.hpp  thread_lifecycle_collector.cpp  thread_lifecycle_collector.hpp  thread_spawn_detector.cpp  thread_spawn_detector.hpp  tu_facts_builder.cpp  tu_facts_builder.hpp
src/internal/diagnostics/: compiler_diagnostic_parser.cpp  compiler_diagnostic_parser.hpp  diagnostic_builder.hpp  diagnostic_catalog.cpp  diagnostic_catalog.hpp
src/internal/reporting/: report_renderer.cpp  report_renderer.hpp
test/: README.md  test_analyzer.py
test/fixtures/: invalid.c
tests/architecture/: test_architecture.cpp
tests/concurrency/: README.md
tests/concurrency/condition-variable/: condition_variable_spurious.c
tests/concurrency/data-race/: cpp_atomic_vs_non_atomic.cpp  cpp_data_race_class.cpp  cpp_double_checked_locking.cpp  cpp_move_semantics_race.cpp  cpp_race_std_async.cpp  data_race_basic.c  data_race_mixed_access.c  race_condition_check_then_use.c
tests/concurrency/deadlock/: deadlock_basic.c  lock_order_violation.c  recursive_deadlock.c
tests/concurrency/memory-barrier/: missing_memory_barrier.c
tests/concurrency/missing-join/: cpp_missing_join.cpp  missing_join_basic.c  missing_join_detach_mix.c  missing_join_multiple.c
tests/concurrency/thread-escape/: fork_thread_race.c  thread_escape_posix.c
tests/fixtures/: hello.c  hello.cpp  invalid.c
tests/fixtures/concurrency/: README.md
tests/fixtures/concurrency/atomic-ordering/: cpp_aba_compare_exchange.cpp  cpp_relaxed_ordering_publish.cpp  seqlock_missing_fence.cpp  store_load_reorder.cpp
tests/fixtures/concurrency/condition-variable/: condition_variable_destructor_race.cpp  condition_variable_lost_wakeup.c  condition_variable_no_predicate_recheck.c  condition_variable_spurious.c
tests/fixtures/concurrency/data-race/: c_bitfield_race.c  cpp_atomic_vs_non_atomic.cpp  cpp_data_race_class.cpp  cpp_double_checked_locking.cpp  cpp_iterator_invalidation_race.cpp  cpp_lambda_capture_race.cpp  cpp_move_semantics_race.cpp  cpp_race_shared_map.cpp  cpp_race_std_async.cpp  cpp_shared_object_by_ref.cpp  cpp_shared_ptr_race.cpp  cpp_thread_local_class.cpp  data_race_alias_ambiguous_pointer_no_fp.c  data_race_alias_global_pointer_reports_low_confidence.c  data_race_basic.c  data_race_callsite_lock_protected.c  data_race_callsite_unprotected_helper_reports_race.c  data_race_lazy_init.c  data_race_mixed_access.c  data_race_mutex_protected.c  data_race_nested_callsite_lock_protected_no_race.c  data_race_partial_callsite_lock_reports_race.c  data_race_split_symbols.c  data_race_stats_counter.c  data_race_stop_flag.c  data_race_struct_fields.c  race_condition_check_then_use.c
tests/fixtures/concurrency/deadlock/: cpp_deadlock_self_lock.cpp  cpp_future_mutex_deadlock.cpp  cpp_scoped_lock_order.cpp  deadlock_basic.c  deadlock_condvar_wrong_mutex.c  deadlock_consistent_order_no_diagnostic.c  deadlock_independent_locks_no_diagnostic.c  deadlock_opposite_order_not_concurrent_no_diagnostic.c  lock_order_violation.c  recursive_deadlock.c
tests/fixtures/concurrency/memory-barrier/: missing_memory_barrier.c
tests/fixtures/concurrency/missing-join/: cpp_missing_join.cpp  cpp_missing_join_scope_exit.cpp  cpp_std_thread_join_no_missing_join.cpp  cpp_std_thread_missing_join.cpp  cpp_std_thread_move_join_no_missing_join.cpp  missing_join_basic.c  missing_join_detach_mix.c  missing_join_early_return.c  missing_join_multiple.c  missing_join_overwritten_handle.c  pthread_create_join_through_handle_pointer_no_missing_join.c  pthread_detach_all_no_missing_join.c  pthread_join_all_no_missing_join.c  pthread_join_mix_reports_only_unresolved_handle.c
tests/fixtures/concurrency/once-init/: cpp_once_init_static_side_effects.cpp  once_init_dclp_no_barrier.c  once_init_double_checked_locking.c  once_init_manual_flag_race.c
tests/fixtures/concurrency/signal-handler/: signal_handler_data_race_global.c  signal_handler_longjmp.c  signal_handler_non_safe_func.c  signal_mutex_deadlock.c  signal_reentrant_function.c  signal_thread_mask.c
tests/fixtures/concurrency/thread-escape/: fork_thread_race.c  thread_escape_loop_variable.c  thread_escape_posix.c  thread_escape_stack_ptr.c
tests/fixtures/concurrency/thread-local/: c_tls_dangling_ptr.c  cpp_tls_destructor_race.cpp
tests/fixtures/concurrency/use-after-free/: cpp_detached_thread_dangling_ref.cpp  (+2 more)
tests/integration/cli/: README.md  human_output_expectations.py  test_analyzer.py  test_cli_cpp.cpp  test_human_output_golden.py
tests/unit/: test_architecture.cpp  test_concurrency_analysis.cpp  test_error_model.cpp
